# AI_behavioral_error

./: .gitignore  AGENTS.md  LICENSE  README.md  biogeme.toml  biogeme_runtime.toml  exp_flowchart.html  experiment_config.json  experiment_config_base.json  krauss_public_materials_pooled_7alts_panel_mixed_logit_biogeme.html  krauss_public_materials_pooled_7alts_panel_mixed_logit_biogeme.pickle  krauss_public_materials_pooled_7alts_panel_mixed_logit_biogeme~00.html  krauss_public_materials_pooled_7alts_panel_mixed_logit_biogeme~00.pickle  model_behavior_registry.json  optima_project_logic_report.md  pyproject.toml
ai_behavioral_error.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/designs/: krauss_sd_attribute_levels.csv
docs/: GPT-OSS-120b-LLM_API_ACCESS_GUIDE.md  audit_20260411.md  example_exp.md  experiment_config_field_reference.md  experiment_workflow.md  gpt54nano_deepseek_chat_human_comparison_20260413.md  latent_regime_experimental_method_20260411.md  latent_regime_intervention_anchored_v2_draft.md  paper_1_framing.md  persona_support_set_generation.md
scripts/: compare_optima_hcm.py  estimate_atasoy_2011_ai_analysis.py  estimate_optima_biogeme_hcm.py  estimate_optima_biogeme_mnl.py  estimate_optima_biogeme_panel_hcm.py  estimate_optima_intervention_metrics.py  estimate_optima_panel_mnl.py  estimate_optima_salcm.py  estimate_optima_torch_hcm.py  legacy_compare_optima_hcm.py  legacy_estimate_optima_biogeme_hcm.py  legacy_estimate_optima_torch_hcm.py  legacy_optima_hcm_model_spec.py  openai_compatible_localserver_async.py  optima_common.py  optima_intervention_regime_questionnaire.py  optima_latent_regime_questionnaire.py  optima_questionnaire_template.py  prepare_optima_data.py  prepare_optima_intervention_regime_data.py  prepare_optima_latent_regime_data.py  replicate_atasoy_2011_models.py  run_optima_ai_collection.py  run_optima_intervention_regime_ai_collection.py  run_optima_latent_regime_ai_collection.py  summarize_optima_experiment.py  summarize_optima_intervention_regime.py  summarize_optima_latent_regime.py  write_parameter_comparison_report.py
src/ai_behavioral_error/: __main__.py  cli.py  (+8 more)
(+712 files in other folders)
