[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-behavioral-error"
version = "0.1.0"
description = "LLM stated-preference respondent pipeline for travel behavior research"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.5",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "statsmodels>=0.13",
]

[project.optional-dependencies]
experiments = [
  "biogeme==3.2.12",
  "matplotlib<3.9",
  "numpy<2",
  "pandas<2.3",
  "scipy<1.14",
]

[project.scripts]
ai-behavioral-error = "ai_behavioral_error.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
