[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-behavioral-error"
version = "0.1.0"
description = "LLM stated-preference respondent pipeline for travel behavior research"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2024.0.0",
  "matplotlib>=3.5",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "statsmodels>=0.13",
]

[project.optional-dependencies]
experiments = [
  "biogeme==3.2.12",
  "matplotlib<3.9",
  "mlx-lm==0.31.2",
  "numpy<2",
  "pandas<2.3",
  "scipy<1.14",
]

[tool.setuptools]
py-modules = []
